fixed search engine choice screen and added infornation runner in .README file

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -8,7 +8,7 @@ environments {
         acceptInsecureCerts = true
         "goog:chromeOptions" {
           args = ["test-type", "ignore-certificate-errors",
-          "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
+          "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking", "disable-search-engine-choice-screen"]
         }
       }
     }
@@ -22,7 +22,7 @@ environments {
           acceptInsecureCerts = true
           "goog:chromeOptions" {
             args = ["test-type", "ignore-certificate-errors", "headless", "--window-size=1000,800"
-              "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
+              "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking", "disable-search-engine-choice-screen"]
           }
         }
       }
